discussion/kv_engine/173486/173486_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51681: Add tests for MemOverhead{,Queue,Index}

Expand on testCheckpointManagerMemUsage to test the
base case of a single checkpoint's memory
calculations.

Add a test to validate that the CheckpointManager's
getMemOverhead(), getMemOverheadIndex(), and
getMemOverheadQueue() are calculated correctly as
the sum of all Checkpoints managed by the CM.

Change-Id: I76c920a2dbc99fea1fbe6917dde8450f06f6a62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-20 12:47:27.000000000
Message: 
Patch Set 7: Patch Set 6 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-04-20 13:24:08.000000000
Message: 
Patch Set 7: Code-Review+1

(2 comments)
File Comment: /PATCHSET_LEVEL -> Code good, it needs conflicts-fix
Line:3376, engines/ep/tests/module_tests/checkpoint_test.cc -> Nit: The test relies on having multiple checkpoints, so I would

  ASSERT_GT(manager.getNumCheckpoints(), 1);

at this point

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 13:37:06.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45408/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(3372): error C2039: "getCheckpointMaxSize": is not a member of "VBucket" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45408/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16791/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33: error: no member named "getCheckpointMaxSize" in "VBucket" [clang-diagnostic-error]
    const std::string value(vb->getCheckpointMaxSize(), "!");
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16791/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16791/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6448/ : FAILURE

Compile error at [2022-04-20T13:12:33.992Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6448/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18910/ : FAILURE

Compile error at [2022-04-20T13:15:19.872Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18910/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19612/ : FAILURE

Compile error at [2022-04-20T13:13:33.542Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19612/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17670/ : FAILURE

Compile error at [2022-04-20T12:52:10.123Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17670/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18573/ : FAILURE

Compile error at [2022-04-20T13:11:30.271Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18573/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6519/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26979/ : FAILURE

Compile error at [2022-04-20T13:15:19.005Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26979/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38147/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15725/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-20 15:20:14.000000000
Message: 
Patch Set 7: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26975/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26975/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6446/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6446/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19609/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19609/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18571/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18571/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18907/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18907/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17666/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17666/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6508/ : FAILURE

Compile error at [2022-04-20T13:01:18.251Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6508/ )
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-04-20 15:20:18.000000000
MISMATCHED INLINE COMMENT
Line:3376, engines/ep/tests/module_tests/checkpoint_test.cc -> Done
----------------------------------------------------------------------------------------------------------------------
